force-app/main/default/objects/AssignmentRule__c/AssignmentRule__c.object-meta.xml
<CustomObject>
    <description>Oggetto corrispondente a regola di assegnazione delle attività alle code per lavorazione.</description>
    <label>Regola di Assegnazione</label>
    <nameField>
        <label>Nome Regola</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regole di Assegnazione</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>