force-app/main/default/objects/AssignmentRule__c/fields/ArrearsOffice__c.field-meta.xml
<CustomField>
    <fullName>ArrearsOffice__c</fullName>
    <description>campo activity da matchare.</description>
    <label>Ufficio Competente Morosità</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HCM</fullName>
            </value>
            <value>
                <fullName>Marche Multiservizi Spa</fullName>
            </value>
            <value>
                <fullName>Mercato Aziende</fullName>
            </value>
            <value>
                <fullName>Mercato Aziende In</fullName>
            </value>
            <value>
                <fullName>Mercato Aziende Out</fullName>
            </value>
            <value>
                <fullName>Mercato Famiglie</fullName>
            </value>
            <value>
                <fullName>Procedure Concorsuali</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>