force-app/main/default/objects/AssignmentRule__c/fields/BPCode__c.field-meta.xml
<CustomField>
    <fullName>BPCode__c</fullName>
    <label>Codice BP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>