force-app/main/default/objects/AssignmentRule__c/fields/ClientCategory__c.field-meta.xml
<CustomField>
    <fullName>ClientCategory__c</fullName>
    <description>campo activity da matchare</description>
    <label>Categoria Cliente</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_CategoryTypeClient</valueSetName>
    </valueSet>
</CustomField>