force-app/main/default/objects/AssignmentRule__c/fields/ClientMarking__c.field-meta.xml
<CustomField>
    <fullName>ClientMarking__c</fullName>
    <description>campo activity da matchare.</description>
    <label>Marcatura Cliente</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_CustomerMarking</valueSetName>
    </valueSet>
</CustomField>