force-app/main/default/objects/AssignmentRule__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <description>campo activity da matchare.</description>
    <label>Commodity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_Commodity</valueSetName>
    </valueSet>
</CustomField>