force-app/main/default/objects/AssignmentRule__c/fields/CompanyOwner__c.field-meta.xml
<CustomField>
    <fullName>CompanyOwner__c</fullName>
    <description>campo activity da matchare.</description>
    <label>Company Owner</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_CompanyOwner</valueSetName>
    </valueSet>
</CustomField>