force-app/main/default/objects/AssignmentRule__c/fields/ComplaintSeverity__c.field-meta.xml
<CustomField>
    <fullName>ComplaintSeverity__c</fullName>
    <description>campo activity da matchare.</description>
    <label>Attributo di Criticità Reclami</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>tmp1</fullName>
            </value>
            <value>
                <fullName>tmp2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>