force-app/main/default/objects/AssignmentRule__c/fields/CreatorAgency__c.field-meta.xml
<CustomField>
    <fullName>CreatorAgency__c</fullName>
    <label>Società dell&apos;utenza creatore</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_UserCompany</valueSetName>
    </valueSet>
</CustomField>