force-app/main/default/objects/AssignmentRule__c/fields/Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Deactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disattivata</label>
    <type>Checkbox</type>
</CustomField>