force-app/main/default/objects/AssignmentRule__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributore</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Code__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Regole di Assegnazione</relationshipLabel>
    <relationshipName>Regole_di_Assegnazione</relationshipName>
    <type>Lookup</type>
</CustomField>