force-app/main/default/objects/AssignmentRule__c/fields/FirstLevelOpinion__c.field-meta.xml
<CustomField>
    <fullName>FirstLevelOpinion__c</fullName>
    <label>Parere Primo Livello</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_FirstLevelOpinion</valueSetName>
    </valueSet>
</CustomField>