force-app/main/default/objects/AssignmentRule__c/fields/HighPriorityQueueImport__c.field-meta.xml
<CustomField>
    <fullName>HighPriorityQueueImport__c</fullName>
    <label>HighPriorityQueueImport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>