force-app/main/default/objects/AssignmentRule__c/fields/LowPriorityQueue__c.field-meta.xml
<CustomField>
    <fullName>LowPriorityQueue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Coda di destinazione per le activity matchate aventi priorità bassa</description>
    <label>Coda Priorità Bassa</label>
    <referenceTo>Queue__c</referenceTo>
    <relationshipLabel>Regole di Assegnazione (Coda Priorità Bassa)</relationshipLabel>
    <relationshipName>Regole_di_Assegnazione2</relationshipName>
    <type>Lookup</type>
</CustomField>