force-app/main/default/objects/AssignmentRule__c/fields/LowPriorityQueueImport__c.field-meta.xml
<CustomField>
    <fullName>LowPriorityQueueImport__c</fullName>
    <label>LowPriorityQueueImport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>