force-app/main/default/objects/AssignmentRule__c/fields/MacroProcess__c.field-meta.xml
<CustomField>
    <fullName>MacroProcess__c</fullName>
    <description>campo activity da matchare.</description>
    <label>Macro Processo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_Cluster</valueSetName>
    </valueSet>
</CustomField>