force-app/main/default/objects/AssignmentRule__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>campo activity da matchare.</description>
    <label>Mercato</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_Market</valueSetName>
    </valueSet>
</CustomField>