force-app/main/default/objects/AssignmentRule__c/fields/MediumPriorityQueue__c.field-meta.xml
<CustomField>
    <fullName>MediumPriorityQueue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Coda di destinazione per le activity matchate aventi priorità media</description>
    <label>Coda Priorità Media</label>
    <referenceTo>Queue__c</referenceTo>
    <relationshipLabel>Regole di Assegnazione (Coda Priorità Media)</relationshipLabel>
    <relationshipName>Regole_di_Assegnazione1</relationshipName>
    <type>Lookup</type>
</CustomField>