force-app/main/default/objects/AssignmentRule__c/fields/MediumPriorityQueueImport__c.field-meta.xml
<CustomField>
    <fullName>MediumPriorityQueueImport__c</fullName>
    <label>MediumPriorityQueueImport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>