force-app/main/default/objects/AssignmentRule__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>campo activity da matchare.</description>
    <label>Priorità</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Alta</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Media</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Bassa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>