force-app/main/default/objects/AssignmentRule__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Processo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To define</fullName>
            </value>
            <value>
                <fullName>Prima Attivazione Ele</fullName>
            </value>
            <value>
                <fullName>Prima Attivazione In delibera</fullName>
            </value>
            <value>
                <fullName>Prima Attivazione Fuori delibera</fullName>
            </value>
            <value>
                <fullName>Prima Attivazione con modifica</fullName>
            </value>
            <value>
                <fullName>Cambio Offerta</fullName>
            </value>
            <value>
                <fullName>Cambio Uso</fullName>
            </value>
            <value>
                <fullName>Connessione con Attivazione</fullName>
            </value>
            <value>
                <fullName>Riattivazione Non Morose</fullName>
            </value>
            <value>
                <fullName>Aggiunta Sconti o Bonus VAS</fullName>
            </value>
            <value>
                <fullName>Subentro Gas</fullName>
            </value>
            <value>
                <fullName>Subentro Ele</fullName>
            </value>
            <value>
                <fullName>Switch in con voltura tecnica</fullName>
            </value>
            <value>
                <fullName>Voltura con Switch</fullName>
            </value>
            <value>
                <fullName>Switch in Ripristinatorio</fullName>
            </value>
            <value>
                <fullName>Switch in Reseller</fullName>
            </value>
            <value>
                <fullName>Switch in Fittizio</fullName>
            </value>
            <value>
                <fullName>Switch in Winback</fullName>
            </value>
            <value>
                <fullName>Switch in Gas</fullName>
            </value>
            <value>
                <fullName>Switch in Ele</fullName>
            </value>
            <value>
                <fullName>Voltura</fullName>
            </value>
            <value>
                <fullName>Aggiunta Sconti o Bonus VAS Ele</fullName>
            </value>
            <value>
                <fullName>Aggiunta Sconti o Bonus VAS Gas</fullName>
            </value>
            <value>
                <fullName>VAS</fullName>
            </value>
            <value>
                <fullName>Temporanea - Nuova Attivazione</fullName>
            </value>
            <value>
                <fullName>Proroga Temporanea</fullName>
            </value>
            <value>
                <fullName>Cambio Uso Tecnico</fullName>
            </value>
            <value>
                <fullName>Cambio Offerta Ele</fullName>
            </value>
            <value>
                <fullName>Cambio Offerta Gas</fullName>
            </value>
            <value>
                <fullName>Allineamento Anagrafica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>