force-app/main/default/objects/AssignmentRule__c/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <description>Coda a cui saranno assegnate le activity identificate da questa regola.</description>
    <label>Coda</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>