force-app/main/default/objects/AssignmentRule__c/fields/QueueSize__c.field-meta.xml
<CustomField>
    <fullName>QueueSize__c</fullName>
    <description>Imposta la dimensione della coda. Se popolato gli altri campi verranno ignorati.</description>
    <label>Limite Coda</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>