force-app/main/default/objects/AssignmentRule__c/fields/QuoteType__c.field-meta.xml
<CustomField>
    <fullName>QuoteType__c</fullName>
    <description>campo activity da matchare.</description>
    <label>Tipo Preventivo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analitico</fullName>
            </value>
            <value>
                <fullName>Predeterminabile</fullName>
            </value>
            <value>
                <fullName>Rapido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>