force-app/main/default/objects/AssignmentRule__c/fields/RequestSource__c.field-meta.xml
<CustomField>
    <fullName>RequestSource__c</fullName>
    <label>Provenienza Richiesta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_RequestSource</valueSetName>
    </valueSet>
</CustomField>