force-app/main/default/objects/AssignmentRule__c/fields/RuleEndDate__c.field-meta.xml
<CustomField>
    <fullName>RuleEndDate__c</fullName>
    <description>Data fine validità della regola.</description>
    <label>Data Fine Validità Regola</label>
    <type>DateTime</type>
</CustomField>