force-app/main/default/objects/AssignmentRule__c/fields/RulePriority__c.field-meta.xml
<CustomField>
    <fullName>RulePriority__c</fullName>
    <description>Priorità rispetto ad altre regole</description>
    <label>Sequenza Regola</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>