force-app/main/default/objects/AssignmentRule__c/fields/RuleStartDate__c.field-meta.xml
<CustomField>
    <fullName>RuleStartDate__c</fullName>
    <description>Data inizio validità della regola.</description>
    <label>Data Inizio Validità Regola</label>
    <type>DateTime</type>
</CustomField>