force-app/main/default/objects/AssignmentRule__c/fields/SalesChannel__c.field-meta.xml
<CustomField>
    <fullName>SalesChannel__c</fullName>
    <description>campo activity da matchare.</description>
    <label>Canale di vendita</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agenzie</fullName>
            </value>
            <value>
                <fullName>Agenzie SME</fullName>
            </value>
            <value>
                <fullName>Associazioni</fullName>
            </value>
            <value>
                <fullName>Back office</fullName>
            </value>
            <value>
                <fullName>Business Agent</fullName>
            </value>
            <value>
                <fullName>Consip</fullName>
            </value>
            <value>
                <fullName>HC Point</fullName>
            </value>
            <value>
                <fullName>Punti Hera</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Sportello</fullName>
            </value>
            <value>
                <fullName>Telefono</fullName>
            </value>
            <value>
                <fullName>Teleselling Inbound</fullName>
            </value>
            <value>
                <fullName>Teleselling Outbound</fullName>
            </value>
            <value>
                <fullName>Vendita Condomini</fullName>
            </value>
            <value>
                <fullName>Vendita TopBusiness</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>