force-app/main/default/objects/AssignmentRule__c/fields/SAPStep__c.field-meta.xml
<CustomField>
    <fullName>SAPStep__c</fullName>
    <label>Step SAP</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_SAPStep</valueSetName>
    </valueSet>
</CustomField>