force-app/main/default/objects/AssignmentRule__c/fields/SecondLevelOpinion__c.field-meta.xml
<CustomField>
    <fullName>SecondLevelOpinion__c</fullName>
    <label>Parere Secondo Livello</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_SecondLevelOpinion</valueSetName>
    </valueSet>
</CustomField>