force-app/main/default/objects/AssignmentRule__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segmento Cliente</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_Segment</valueSetName>
    </valueSet>
</CustomField>