force-app/main/default/objects/AssignmentRule__c/fields/SubProcess__c.field-meta.xml
<CustomField>
    <fullName>SubProcess__c</fullName>
    <label>SottoProcesso</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Con Autolettura</fullName>
            </value>
            <value>
                <fullName>Retroattiva</fullName>
            </value>
            <value>
                <fullName>Accise - Agevolazione cliente</fullName>
            </value>
            <value>
                <fullName>Accise - Energia Elettrica</fullName>
            </value>
            <value>
                <fullName>Accise - Errata applicazione</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Account e Billing Profile</fullName>
            </value>
            <value>
                <fullName>Billing Profile</fullName>
            </value>
            <value>
                <fullName>Cambio Amministratore</fullName>
            </value>
            <value>
                <fullName>Cambio Intest/Indirizzo Amministratore</fullName>
            </value>
            <value>
                <fullName>Elementi di dettaglio</fullName>
            </value>
            <value>
                <fullName>IVA - Agevolazione cliente</fullName>
            </value>
            <value>
                <fullName>IVA - Errata applicazione</fullName>
            </value>
            <value>
                <fullName>IVA - Esenzione</fullName>
            </value>
            <value>
                <fullName>IVA - Revoca Esenzione</fullName>
            </value>
            <value>
                <fullName>Modifica Dati di Contatto</fullName>
            </value>
            <value>
                <fullName>Modifica Dati di Recapito</fullName>
            </value>
            <value>
                <fullName>Modifica Dati di Recapito Votiva Modena</fullName>
            </value>
            <value>
                <fullName>Modifica Dati Fiscali</fullName>
            </value>
            <value>
                <fullName>Report disaggregato</fullName>
            </value>
            <value>
                <fullName>Report storno di adeguamento</fullName>
            </value>
            <value>
                <fullName>Rettifica per segnalazione cassetto fiscale</fullName>
            </value>
            <value>
                <fullName>Variazione Gruppo IVA</fullName>
            </value>
            <value>
                <fullName>Ordinaria</fullName>
            </value>
            <value>
                <fullName>Mortis Causa</fullName>
            </value>
            <value>
                <fullName>Incorporazione societaria</fullName>
            </value>
            <value>
                <fullName>Errore di Lettura</fullName>
            </value>
            <value>
                <fullName>Errore Stima Consumi</fullName>
            </value>
            <value>
                <fullName>Processo M01</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>