force-app/main/default/objects/AssignmentRule__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>campo activity da matchare.</description>
    <label>Tipo</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_ActivityType</valueSetName>
    </valueSet>
</CustomField>