force-app/main/default/objects/AssignmentRule__c/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <description>Identificatore univoco della coda. Concatenazione Type__c + RulePriority__c</description>
    <label>Unique ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>