force-app/main/default/objects/AssignmentRule__c/fields/UserCreatorChannel__c.field-meta.xml
<CustomField>
    <fullName>UserCreatorChannel__c</fullName>
    <label>Canale Creatore Utenza</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>APP</fullName>
            </value>
            <value>
                <fullName>Assistente web</fullName>
            </value>
            <value>
                <fullName>Back office</fullName>
            </value>
            <value>
                <fullName>Back office Teleselling</fullName>
            </value>
            <value>
                <fullName>Back office Vendita</fullName>
            </value>
            <value>
                <fullName>Callback</fullName>
            </value>
            <value>
                <fullName>Camper</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Consip</fullName>
            </value>
            <value>
                <fullName>Da PGM</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>HC_WEB</fullName>
            </value>
            <value>
                <fullName>Helpdesk</fullName>
            </value>
            <value>
                <fullName>IVR</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Protocollo</fullName>
            </value>
            <value>
                <fullName>ServiziSociali</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>SOL</fullName>
            </value>
            <value>
                <fullName>Sportello</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Supporto agenzie</fullName>
            </value>
            <value>
                <fullName>Supporto GDA</fullName>
            </value>
            <value>
                <fullName>Telefono Inbound</fullName>
            </value>
            <value>
                <fullName>Telefono Outbound</fullName>
            </value>
            <value>
                <fullName>Teleselling</fullName>
            </value>
            <value>
                <fullName>Vendita Business</fullName>
            </value>
            <value>
                <fullName>Vendita Condomini</fullName>
            </value>
            <value>
                <fullName>Vendita MM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>