force-app/main/default/objects/AssignmentRule__c/fields/UserCreatorGroup__c.field-meta.xml
<CustomField>
    <fullName>UserCreatorGroup__c</fullName>
    <label>Gruppo Creatore Utenza</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_CreatorGroup</valueSetName>
    </valueSet>
</CustomField>