force-app/main/default/objects/AssignmentRule__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <description>campo activity da matchare.</description>
    <label>Società di Vendita</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hera Comm Marche</fullName>
            </value>
            <value>
                <fullName>Hera Comm S.p.A.</fullName>
            </value>
            <value>
                <fullName>EstEnergy S.p.A.</fullName>
            </value>
            <value>
                <fullName>Marche Multiservizi TARI</fullName>
            </value>
            <value>
                <fullName>Marche Multiservizi S.p.A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>